--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "export:data": "tsx scripts/export-data.ts"
+    "export:data": "tsx scripts/export-data.ts",
+    "gen:favicon": "tsx scripts/generate-favicon.ts"
   },
   "dependencies": {
     "firebase": "^12.6.0",
@@ -28,6 +29,7 @@
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "png-to-ico": "^2.1.8"
   }
 }
